Fixes for mobile, still missing lower resolution mobile phone

--- a/src/assets/style/components/slotMachine/_reel.sass
+++ b/src/assets/style/components/slotMachine/_reel.sass
@@ -1,10 +1,5 @@
 @import '../../settings'
 
-$symbol-width: 141px
-$symbol-height: 121px
-$reel-width: $symbol-width
-$reel-height: $symbol-height * 3
-
 .Reel
   display: flex
   position: relative
@@ -19,9 +14,16 @@ $reel-height: $symbol-height * 3
   transition: 0.1s background ease-out
   // box-shadow: inset 0px 25px 30px 0px #000000
   @include for-phone-only
-    width: 141px
-    background-size: $reel-width - 21px
-    height: calc(363px - 60px)
+    width: $reel-width-phone
+    background-size: $reel-width-phone
+    height: $reel-height-phone
+  
+  &::before
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    box-shadow: inset 0px 0px 20px 0px #000000
 
   & + &::after
     content: ''
